# phone_billing_app

./: CMakeLists.txt  README.md  config.ini.example  init_db.sql  main.cpp
PhoneBillingApp_dist/: config.ini
controllers/: authcontroller.cpp  authcontroller.h  basecontroller.cpp  basecontroller.h  callcontroller.cpp  callcontroller.h  rolecontroller.cpp  rolecontroller.h
core/: Config.cpp  Config.h  DatabaseManager.cpp  DatabaseManager.h  Logger.cpp  Logger.h
models/: call.cpp  call.h  calldetail.cpp  calldetail.h  model.h  role.cpp  role.h  user.cpp  user.h
views/: adduserdialog.cpp  adduserdialog.h  callview.cpp  callview.h  loginview.cpp  loginview.h  mainwindow.cpp  mainwindow.h  registerview.cpp  registerview.h
